--- a/package.json
+++ b/package.json
@@ -274,6 +274,7 @@
     "yallist": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
