--- a/package.json
+++ b/package.json
@@ -273,7 +273,10 @@
     "ws": "^8.13.0",
     "yallist": "^4.0.0"
   },
-  "devDependencies":
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
     "css-loader": "^6.7.3",
