--- a/package.json
+++ b/package.json
@@ -295,6 +295,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "scripts": {
+    "test": "jest",
     "start": "webpack serve --open",
     "build": "webpack"
   },
